--- a/Apple Website Clone/style.css
+++ b/Apple Website Clone/style.css
@@ -220,6 +220,11 @@
   display: none;
 }
 
+.bottom-shop {
+  margin-top: 30px;
+  margin-left: 165px;
+}
+
 /* media queries */
 
 @media only screen and (max-width: 600px) {
