--- a/style.css
+++ b/style.css
@@ -224,6 +224,97 @@
   margin-top: 30px;
   margin-left: 165px;
 }
+/* footer */
+
+a:hover {
+  text-decoration: underline;
+}
+
+footer {
+  background-color: #f2f2f2;
+  font-family: calibri;
+  padding: 0 22px;
+  padding-bottom: 21px;
+  overflow: hidden;
+}
+
+.footer-content {
+  max-width: 980px;
+  margin: 0 auto;
+}
+
+.footer-menu {
+  padding-top: 21px;
+  overflow: hidden;
+}
+
+.footer-col {
+  width: 20%;
+  float: left;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+h3 {
+  color: #333;
+  font-size: 14px;
+  position: relative;
+  z-index: 1;
+  background: #f2f2f2;
+  margin-bottom: 6px;
+  margin-top: 0;
+}
+
+.product-list {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+
+.product-list li {
+  margin-bottom: 5px;
+  line-height: 1;
+}
+
+.product-list a {
+  color: #555;
+  display: inline-block;
+  font-size: 12px;
+}
+
+.product-list a:hover {
+  color: #333;
+}
+
+input[type="checkbox"]:checked + .col-section .product-list {
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+  visibility: visible;
+  position: static;
+  transform: none;
+}
+
+input[type="checkbox"]:checked + .col-section h3::after {
+  transform: rotate(45deg) scale(1.08);
+}
+
+.footer-base {
+  padding-top: 34px;
+  padding-bottom: 21px;
+  color: #888;
+  font-size: 12px;
+}
+
+.footer-more-ways {
+  margin-bottom: 7px;
+  padding-bottom: 6px;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
 
 /* media queries */
 
@@ -310,5 +401,55 @@
   .menu-list ul {
     font-size: 12px;
     padding: 10px;
+  }
+  /* footer */
+  footer {
+    padding: 0 16px;
+    padding-bottom: 21px;
+  }
+
+  .footer-col {
+    width: 100%;
+  }
+
+  .item {
+    border-bottom: 1px solid #d6d6d6;
+  }
+
+  h3 {
+    padding: 10px 0;
+    margin: 0;
+    cursor: pointer;
+  }
+
+  h3::after {
+    content: "+";
+    float: right;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: -2px;
+    margin-right: 8px;
+    transition: transform 0.3s ease;
+  }
+
+  .product-list {
+    visibility: hidden;
+    position: absolute;
+    transform: translateY(-100px);
+    z-index: 1;
+    padding: 5px 0 16px 0;
+  }
+
+  .product-list li {
+    margin: 0;
+  }
+
+  .product-list a {
+    display: block;
+    padding: 6px 14px;
+  }
+
+  .footer-col {
+    overflow: hidden;
   }
 }
